# chronicle-ai

./: .gitignore  README.md  config.yaml.example  pyproject.toml
.gemini/skills/chronicle/: SKILL.md
chronicle/: main.py
chronicle/data/guardians/: cartographer.md  curator.md  hugo.md  strategist.md
chronicle/src/: api.py  graph.py  guardian.py  indexer.py  linter.py  mcp_server.py  models.py  observer.py  recommender.py  series_manager.py  session_memory.py
chronicle/src/guardians/: adversarial_peer.py  base.py  library.py  library_models.py  orchestrator.py  remaining_guardians.py  systems_historian.py
chronicle/src/providers/: base.py  mlx.py  ollama.py  openai.py
chronicle/src/utils/: chunker.py  config.py  logging.py  paths.py
data/: expert_instructions.md
data/guardians/: craftsman.md  explorer.md  historian.md  peer.md
docs/: ARCHITECTURE.md  PRD.md  ROADMAP.md  VISION.md
docs/adrs/: 001-pivot-to-narrative-cicd.md  002-per-post-limit-for-search-diversity.md  003-structured-cli-subcommands.md  004-include-drafts-argument-scoping.md  005-ai-agent-as-sdk-client.md
tests/: test_cli.py  test_config.py  test_graph.py  test_guardians.py  test_indexer.py  test_integration.py  test_ledger.py  test_linter.py  test_orchestrator.py  test_paths.py  test_providers.py  test_recommender.py  test_search.py  test_series.py  test_smoke.py  violation_draft.md
