[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chronicle-ai"
version = "1.0.0"
description = "A sovereign intelligence system for content creators."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "lancedb>=0.17.0",
  "ollama>=0.4.0",
  "watchdog>=6.0.0",
  "python-frontmatter>=1.1.0",
  "pandas>=2.0.0",
  "pyarrow>=15.0.0",
  "sentence-transformers>=3.0.0",
  "pyyaml>=6.0.0",
  "pydantic>=2.0.0",
  "tqdm>=4.66.0",
  "semantic-text-splitter>=0.17.0",
]

[project.scripts]
chronicle = "chronicle.main:main"

[tool.hatch.build.targets.wheel]
packages = ["chronicle"]

[tool.pytest.ini_options]
markers = ["smoke: Tests that use real local infrastructure (Ollama, LanceDB)"]
